--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
-{ "name": "cozy-template"
-, "version": "0.0.1"
-, "engines": ["node = 0.8.x"]
-, "description": "A template project for cozy applications"
-, "license": "MIT"
-, "repository":
-  {
-    "type": "git"
-  , "url": "https://github.com/mycozycloud/cozy-template.git"
-  }
-, "main": "server.coffee"
-, "dependencies":
-  { 
-    "americano":        "= 0.2.2"
-  , "americano-cozy":   "= 0.1.2"
-  , "jugglingdb":       "= 0.2.0-23"
-  , "jugglingdb-cozy-adapter": "0.3.1"
-  }
-, "devDependencies":
-  { "should":           "= 1.2.0"
-  , "mocha":            "= 1.6.0"
-  , "chai":             "= 1.3.0"
-  , "request-json":     ">= 0"
-  }
-, "scripts":
-  { "test": "cake tests"
-  , "start": "coffee server.coffee"
+{
+  "name": "cozy-tutorial",
+  "version": "0.0.1",
+  "description": "An application to get you started with web app development and Cozy.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mycozycloud/cozy-tutorial.git"
+  },
+  "main": "server.js",
+  "dependencies": {
+    "americano": "~0.2.10",
+    "americano-cozy": "~0.1.3"
+  },
+  "engines": [
+    "node = 0.8.x"
+  ],
+  "scripts": {
+    "start": "node server.js"
   }
 }
